Content alignment fixed

--- a/styles.css
+++ b/styles.css
@@ -178,7 +178,7 @@ nav a:hover::after {
     justify-content: space-between;
     align-items: center;
     padding: 20px 50px;
-    margin-top: 14rem;
+    margin-top: 0.5rem;
 }
 
 .down-logo {
@@ -207,10 +207,10 @@ nav a:hover::after {
 
 .services {
     height: 100vh;
-    padding: 10rem;
     justify-content: center;
     align-items: center;
     color: rgb(0, 0, 0);
+    margin-top: 20px;
 }
 
 .services h2 {
